[project]
name = "solana_wallet_v2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "base58==2.1.1",
  "cryptography==43.0.1",
  "mnemonic==0.21",
  "requests==2.32.3",
  "PyNaCl==1.5.0",
  "flet==0.27.6"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Solana Wallet v2"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
  "base58==2.1.1",
  "cryptography==43.0.1",
  "mnemonic==0.21",
  "requests==2.32.3",
  "PyNaCl==1.5.0",
  "flet==0.27.6"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.flet.android.permission]
"android.permission.INTERNET" = true