[project]
name = "solana_wallet_v3"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "base58==2.1.1",
  "cryptography==43.0.1",
  "mnemonic==0.21",
  "httpx==0.28.1",
  "PyNaCl==1.5.0",
  "typing_extensions==4.15.0",
  "flet==0.82.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Solana Wallet v3"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
  "base58==2.1.1",
  "cryptography==43.0.1",
  "mnemonic==0.21",
  "httpx==0.28.1",
  "PyNaCl==1.5.0",
  "typing_extensions==4.15.0",
  "flet==0.82.2"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.82.2"}

[tool.flet.android.permission]
"android.permission.INTERNET" = true